Fix modal position on mobile.

--- a/inthe_am/taskmanager/static/foundation/scss/app.scss
+++ b/inthe_am/taskmanager/static/foundation/scss/app.scss
@@ -356,7 +356,7 @@ div.alert-box.error {
   .reveal-modal {
     width: 100%;
     left: 0px;
-    top: 0px;
+    top: 50px;
     margin: 0px;
     padding: 5px;
   }
